--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -1,3 +1,4 @@
+
 郭霖博客:
     link: http://blog.csdn.net/guolin_blog
     avatar: guolin.jpg
@@ -6,3 +7,7 @@
     link: http://blog.csdn.net/lmj623565791
     avatar: hongyang.jpg
     descr: "郭霖好基友/CSDN知名Android博主"
+Hans:
+    link: https://www.hans-dev.com/
+    avatar: hans.png
+    descr: 来自某神秘组织/无一不知无一不晓
