--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -7,7 +7,27 @@
     link: http://blog.csdn.net/lmj623565791
     avatar: hongyang.jpg
     descr: "郭霖好基友/CSDN知名Android博主"
+五角:
+    link: 
+    avatar: wujiao.png
+    descr: 来自某神秘组织/长发女装大佬
 Hans:
     link: https://www.hans-dev.com/
     avatar: hans.png
     descr: 来自某神秘组织/无一不知无一不晓
+敬哥哥:
+    link: http://www.jianshu.com/u/7bc2bf311cb5
+    avatar: jing.jpg
+    descr: 来自某神秘组织/神秘力量掌控者
+丁丁丁丁:
+    link: http://www.jianshu.com/users/4bc2080d98c4/timeline
+    avatar: ding.jpg
+    descr: 来自某神秘组织/嘲讽/圣盾/灰烬使者
+潘:
+    link: http://www.jianshu.com/users/0bce9e23a8b5/timeline
+    avatar: pan.jpg
+    descr: 来自某神秘组织/嘴角疯狂tm上扬
+NR:
+    link: http://www.jianshu.com/u/e244fad16d0f
+    avatar: nr.jpg
+    descr: 来自某神秘组织/精通在Java中思考
