--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -8,7 +8,7 @@
     avatar: hongyang.jpg
     descr: "郭霖好基友/CSDN知名Android博主"
 五角:
-    link: 
+    link: http://www.baidu.com
     avatar: wujiao.png
     descr: 来自某神秘组织/长发女装大佬
 Hans:
