--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -8,8 +8,8 @@
     avatar: hongyang.jpg
     descr: "郭霖好基友/CSDN知名Android博主"
 五角:
-    link: http://www.baidu.com
-    avatar: wujiao.png
+    link: http://www.wjcodes.com
+    avatar: wujiao.jpg
     descr: 来自某神秘组织/长发女装大佬
 Hans:
     link: https://www.hans-dev.com/
