--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ script:
 after_script:
   - git config user.name "CodePoem"
   - git config user.email "806957428@qq.com"
-  - sed -i "s/git@github.com:CodePoem\/CodePoem.github.io.git/https:\/\/gh_token@github.com\/CodePoem\/CodePoem.github.io.git/g" ./_config.yml
-  - sed -i "s/gh_token/${GH_TOKEN}/g" ./_config.yml
+  - sed -i "s/git\@github/https:\/\/${GH_TOKEN}\@github/g" ./_config.yml
   - hexo deploy
 notifications:
   email:
