--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "version": "3.8.0"
   },
   "dependencies": {
+    "ejs": "^2.5.5",
     "hexo": "^3.8.0",
-    "hexo-deployer-git": "^0.3.1",
-    "hexo-generator-archive": "^0.1.4",
+    "hexo-deployer-git": "^1.0.0",
+    "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
-    "hexo-generator-search": "^2.1.1",
+    "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.11",
