--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,15 @@ pagination_dir: page
 ## Themes: https://hexo.io/themes/
 theme: material
 
+# plugin
+plugin:
+- hexo-generator-feed
+# Feed Atom
+feed:
+type: atom
+path: atom.xml
+limit: 0
+
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
