--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-helper-qrcode": "^1.0.2",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.11",
     "hexo-renderer-stylus": "^0.3.3",
