--- a/themes/material/_config.yml
+++ b/themes/material/_config.yml
@@ -36,10 +36,10 @@ uiux:
     slogan:
         - "大梦谁先觉，平生我自知~"
         - "Code a poem and poem a code"
-    theme_color: "#FF3C3C"
-    theme_sub_color: "#000000"
+    theme_color: "#000000"
+    theme_sub_color: "#FF3C3C"
     hyperlink_color: "#000000"
-    button_color: "#FF3C3C"
+    button_color: "#000000"
     android_chrome_color: "#FF3C3C"
     nprogress_color: "#FF3C3C"
     nprogress_buffer: "800"
