--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 梦半觉
 subtitle: 大梦谁先觉，平生我自知~
-description: Code a poem and poem a code
+description: Code a poem and poem a code~
 author: CodePoem
 language: zh-CN
 timezone: Asia/Shanghai
