--- a/themes/material/_config.yml
+++ b/themes/material/_config.yml
@@ -35,7 +35,7 @@ scheme: Paradox
 uiux:
     slogan:
         - "大梦谁先觉，平生我自知~"
-        - "Code a poem and poem a code"
+        - "Code a poem and poem a code~"
     theme_color: "#000000"
     theme_sub_color: "#FF3C3C"
     hyperlink_color: "#000000"
