:sparkles: feature: add resume

--- a/themes/material/_config.yml
+++ b/themes/material/_config.yml
@@ -239,6 +239,10 @@ sidebar:
             link: "/about"
             icon: person
             divider: false
+        Resume:
+            link: "/resume"
+            icon: notes
+            divider: false
     article_num:
         use: true
         divider: false
