--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "version": "3.9.0"
   },
   "dependencies": {
-    "ejs": "^2.6.2",
-    "eslint": "^6.4.0",
-    "hexo": "^3.9.0",
-    "hexo-deployer-git": "^1.0.0",
+    "ejs": "^2.7.4",
+    "eslint": "^6.8.0",
+    "hexo": "^4.2.0",
+    "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-qrcode": "^1.0.2",
     "hexo-renderer-ejs": "^0.2.0",
-    "hexo-renderer-marked": "^0.2.11",
+    "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.2.2",
     "lodash": "^4.17.15",
