:art: style(common): format post
format style

--- a/themes/material/_config.yml
+++ b/themes/material/_config.yml
@@ -129,7 +129,7 @@ highlight:
 #    Prettify
 #        theme: # Available value in /source/css/prettify/[theme].min.css
 prettify:
-    enable: false
+    enable: true
     theme: "github-v2"
 
 #    Hanabi (https://github.com/egoist/hanabi)
