--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,9 @@ script:
   - hexo generate
 after_script:
   - git config user.name "CodePoem"
-  - git config user.email "806957428@qq.com"
+  - git config user.email "codepoemfun@gmail.com"
   - sed -i "s/git\@github\.com\:/https:\/\/$GH_TOKEN\@github\.com\//g" ./_config.yml
   - hexo deploy
 notifications:
   email:
-    - 806957428@qq.com
+    - codepoemfun@gmail.com
