:sparkles: feat(common): update title and bg
06 Apr 2021 by GitHub

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 梦半觉
+title: 梦半觉-CodePoem
 subtitle: 大梦谁先觉，平生我自知~
 description: Code a poem and poem a code~
 author: CodePoem
