--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -284,7 +284,7 @@ iconfont: //at.alicdn.com/t/font_1736178_kmeydafke9r.css
 navbar:
   # 导航栏左侧的标题，为空则按 hexo config 中 `title` 显示
   # The title on the left side of the navigation bar. If empty, it is based on `title` in hexo config
-  blog_title: "梦半觉"
+  blog_title: "梦半觉-CodePoem"
 
   # 导航栏毛玻璃特效，实验性功能，可能会造成页面滚动掉帧和抖动，部分浏览器不支持会自动不生效
   # Navigation bar frosted glass special animation. It is an experimental feature
@@ -661,7 +661,7 @@ disqus:
   # 以下为 Disqusjs 支持, 国内用户如果想使用 Disqus 建议配合使用
   # The following are Disqusjs configurations, please ignore if DisqusJS is not required
   # See: https://github.com/SukkaW/DisqusJS
-  disqusjs: false
+  disqusjs: true
   apikey:
 
 # Gitalk
@@ -788,7 +788,7 @@ archive:
 #---------------------------
 category:
   enable: true
-  banner_img: /img//img/v_bg.png
+  banner_img: /img/v_bg.png
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
@@ -841,7 +841,7 @@ about:
   banner_mask_alpha: 0.3
   subtitle:
   avatar: /img/v_half.png
-  name: "CodePoem-梦半觉"
+  name: "梦半觉-CodePoem"
   intro: "An poet, coder, dreamer."
   # 更多图标可从 https://hexo.fluid-dev.com/docs/icon/ 查找，`class` 代表图标的 css class，添加 `qrcode` 后，图标不再是链接而是悬浮二维码
   # More icons can be found from https://hexo.fluid-dev.com/docs/en/icon/  `class` is the css class of the icon. If adding `qrcode`, The icon is no longer a link, but a hovering QR code
@@ -950,6 +950,18 @@ links:
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis
     type: disqus
+
+  # Disqus
+  # 基于第三方的服务，国内用户直接使用容易被墙，建议配合 Disqusjs
+  # Based on third-party service
+  # See: https://disqus.com
+  disqus:
+    shortname: codepoem
+    # 以下为 Disqusjs 支持, 国内用户如果想使用 Disqus 建议配合使用
+    # The following are Disqusjs configurations, please ignore if DisqusJS is not required
+    # See: https://github.com/SukkaW/DisqusJS
+    disqusjs: true
+    apikey:
 
 
 #---------------------------
