:sparkles: feat(common): add nav submenu
06 Apr 2021 by GitHub

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -18,7 +18,7 @@
 
 # 用于浏览器标签的图标
 # Icon for browser tab
-favicon: /img/v_half.webp
+favicon: /img/v_half.png
 
 # 用于苹果设备的图标
 # Icon for Apple touch
@@ -310,6 +310,15 @@ navbar:
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
     - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
     - { key: "rss", link: "https://codepoem.fun/atom.xml", icon: "iconfont icon-rss" }
+    - {
+      key: '厚薄',
+      icon: 'iconfont icon-books',
+      submenu: [
+        { key: '数据结构与算法-VAlgorithm', link: 'https://codepoem.fun/VAlgorithm' },
+        { key: '设计模式-VDesignPatterns', link: 'https://codepoem.fun/VDesignPatterns' },
+        { key: 'Android知识体系-VAndroidReview', link: 'https://codepoem.fun/VAndroidReview' }
+      ]
+    }
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
